--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5D6337</color>
-    <color name="colorPrimaryDark">#4C5226</color>
-    <color name="colorAccent">#5D6337</color>
+    <color name="colorPrimary">#354074</color>
+    <color name="colorPrimaryDark">#243063</color>
+    <color name="colorAccent">#354074</color>
 </resources>
