Added MainActivity tabs and SettingsActivity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,7 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
+            android:drawableStart="@drawable/password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +56,7 @@
             android:layout_marginTop="300dp"
             android:ems="10"
             android:hint="E-mail address"
+            android:drawableStart="@drawable/email"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="@+id/password"
             app:layout_constraintHorizontal_bias="0.833"
