--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -44,6 +44,7 @@
             android:layout_marginTop="500dp"
             android:ems="10"
             android:hint="E-mail address"
+            android:drawableStart="@drawable/email"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +57,7 @@
             android:layout_marginTop="600dp"
             android:ems="10"
             android:hint="Password"
+            android:drawableStart="@drawable/password"
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
@@ -153,6 +155,7 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
+            android:drawableStart="@drawable/password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password2"
