Added group list for user and GroupChatActivity

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/set_profile_image"
         android:layout_marginTop="30dp"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:hint="Username"
         android:drawableStart="@drawable/edit_profile"
         android:textAlignment="center"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/set_user_name"
         android:layout_marginTop="30dp"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:hint="User status"
         android:drawableStart="@drawable/edit_status"
         android:textAlignment="center"
