--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chats_recycler_view"
+        android:id="@+id/friends_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/new_chat_btn"
+        android:id="@+id/add_friend_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -19,6 +19,6 @@
         app:fabSize="normal"
         android:backgroundTint="@color/colorPrimary"
         android:elevation="6dp"
-        android:src="@drawable/ic_message"/>
+        android:src="@drawable/ic_person_add_black_24dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
