--- a/app/src/main/res/layout/chat_bar_layout.xml
+++ b/app/src/main/res/layout/chat_bar_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:id="@+id/chat_bar"
@@ -25,10 +24,23 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/group_chat_image"
             android:layout_marginStart="10dp"
-            android:layout_centerVertical="true"
             android:text="Group name"
             android:textStyle="bold"
             android:textSize="22sp"
             android:textColor="#FFFFFF"/>
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/group_chat_image"
+            android:layout_below="@id/group_chat_name"
+            android:layout_marginStart="10dp">
+
+            <TextView
+                android:id="@+id/group_chat_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Group description"/>
+        </HorizontalScrollView>
     </RelativeLayout>
 </androidx.appcompat.widget.Toolbar>
