--- a/app/src/main/res/layout/user_profile_layout.xml
+++ b/app/src/main/res/layout/user_profile_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="350dp"
-    android:layout_height="400dp"
+    android:layout_height="wrap_content"
     android:padding="5dp"
     android:layout_gravity="center">
     
