Add Delete Group and Leave Group features

--- a/app/src/main/res/layout/activity_create_group.xml
+++ b/app/src/main/res/layout/activity_create_group.xml
@@ -109,8 +109,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/create_group_members_recycler_view"
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/create_group_add_friend_btn"
             android:layout_marginTop="30dp"/>
