--- a/app/src/main/res/layout/user_profile_layout.xml
+++ b/app/src/main/res/layout/user_profile_layout.xml
@@ -46,11 +46,12 @@
 
         <TextView
             android:id="@+id/user_profile_status"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:text="User status"
+            android:textAlignment="center"
             android:textSize="20sp"/>
     </LinearLayout>
     
