--- a/app/src/main/res/layout/chat_message_item2.xml
+++ b/app/src/main/res/layout/chat_message_item2.xml
@@ -7,52 +7,55 @@
     android:layout_marginBottom="5dp">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/colorAccent">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/sender_profile_pic"
             android:layout_width="56dp"
             android:layout_height="56dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginStart="10dp"
+            android:layout_alignParentEnd="true"
             android:src="@drawable/profile_image"/>
 
         <TextView
             android:id="@+id/sender_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/sender_profile_pic"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
+            android:layout_toStartOf="@+id/sender_profile_pic"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="15dp"
             android:text="Contact Name"
             android:textStyle="bold"
             android:textSize="17sp"
-            android:textColor="@color/colorAccent"/>
+            android:textColor="#FFFFFF"/>
 
         <TextView
             android:id="@+id/message_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/sender_profile_pic"
-            android:layout_marginStart="10dp"
+            android:layout_toStartOf="@+id/sender_profile_pic"
             android:layout_marginTop="5dp"
+            android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_below="@id/sender_name"
             android:text="Message content"
+            android:textColor="#FFFFFF"
             android:textSize="15sp"/>
 
         <TextView
             android:id="@+id/message_timestamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="15dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="15dp"
             android:layout_below="@+id/message_content"
             android:layout_marginTop="5dp"
             android:text="Timestamp"
-            android:textSize="10sp"/>
+            android:textSize="10sp"
+            android:textColor="#FFFFFF"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
