--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -43,6 +43,25 @@
             android:layout_marginTop="50dp"/>
 
         <EditText
+            android:id="@+id/set_device_id"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="20dp"
+            android:ems="10"
+            android:hint="Advertising ID"
+            android:enabled="false"
+            android:textColorHint="@color/colorText"
+            android:textColor="@color/colorPrimaryDark"
+            android:drawableStart="@drawable/ic_baseline_account_circle"
+            android:drawablePadding="12dp"
+            android:background="@drawable/custom_input"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:layout_below="@id/set_user_name"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"/>
+
+        <EditText
             android:id="@+id/set_profile_status"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -58,7 +77,7 @@
             android:background="@drawable/custom_input"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
-            android:layout_below="@id/set_user_name"
+            android:layout_below="@id/set_device_id"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"/>
 
