--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -28,7 +28,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:ems="10"
-            android:hint="Name"
+            android:hint="@string/name"
             android:textColorHint="@color/colorText"
             android:drawableStart="@drawable/ic_baseline_account_circle"
             android:drawableTint="@color/colorPrimary"
@@ -43,32 +43,12 @@
             android:layout_centerHorizontal="true"/>
 
         <EditText
-            android:id="@+id/phone"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="20dp"
-            android:ems="10"
-            android:hint="Phone number"
-            android:textColorHint="@color/colorText"
-            android:drawableStart="@drawable/ic_baseline_call_24"
-            android:drawableTint="@color/colorPrimary"
-            android:drawablePadding="12dp"
-            android:inputType="phone"
-            android:textColor="@color/colorPrimaryDark"
-            android:background="@drawable/custom_input"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:layout_below="@id/name"
-            android:layout_marginTop="25dp"
-            android:layout_centerHorizontal="true"/>
-
-        <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/password"
             android:textColorHint="@color/colorText"
             android:drawableStart="@drawable/ic_baseline_lock_24"
             android:drawableTint="@color/colorPrimary"
@@ -78,7 +58,7 @@
             android:background="@drawable/custom_input"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
-            android:layout_below="@id/phone"
+            android:layout_below="@id/name"
             android:layout_marginTop="25dp"
             android:layout_centerHorizontal="true"/>
 
@@ -88,7 +68,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:ems="10"
-            android:hint="Confirm password"
+            android:hint="@string/confirm_password"
             android:textColorHint="@color/colorText"
             android:drawableStart="@drawable/ic_baseline_lock_24"
             android:drawableTint="@color/colorPrimary"
@@ -110,7 +90,7 @@
             android:layout_marginTop="75dp"
             app:backgroundTint="@color/colorAccent"
             android:background="@drawable/custom_button"
-            android:text="Sign Up"
+            android:text="@string/sign_up"
             android:textSize="20sp"
             android:textColor="@color/colorWhite"
             android:textAllCaps="false"
