--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -28,7 +28,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:ems="10"
-            android:hint="Username"
+            android:hint="@string/username"
             android:textColorHint="@color/colorText"
             android:textColor="@color/colorPrimaryDark"
             android:inputType="textPersonName|textCapWords"
@@ -48,7 +48,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:ems="10"
-            android:hint="Advertising ID"
+            android:hint="@string/advertising_id"
             android:enabled="false"
             android:textColorHint="@color/colorText"
             android:textColor="@color/colorPrimaryDark"
@@ -67,7 +67,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:ems="10"
-            android:hint="User status"
+            android:hint="@string/user_status"
             android:textColorHint="@color/colorText"
             android:textColor="@color/colorPrimaryDark"
             android:inputType="textMultiLine"
@@ -89,7 +89,7 @@
             android:layout_marginTop="75dp"
             app:backgroundTint="@color/colorAccent"
             android:background="@drawable/custom_button"
-            android:text="Update profile"
+            android:text="@string/update_profile"
             android:textSize="20sp"
             android:textColor="@color/colorWhite"
             android:textAllCaps="false"
