--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:text="Snake Messenger"
+            android:text="@string/snake_messenger"
             android:textColor="@color/colorWhite"
             android:textSize="40sp"
             android:textStyle="bold"
@@ -39,7 +39,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="20dp"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/password"
             android:textColorHint="@color/colorText"
             android:textColor="@color/colorPrimaryDark"
             android:inputType="textPassword"
@@ -61,7 +61,7 @@
             android:layout_marginTop="25dp"
             app:backgroundTint="@color/colorAccent"
             android:background="@drawable/custom_button"
-            android:text="Sign In"
+            android:text="@string/sign_in"
             android:textSize="20sp"
             android:textColor="@color/colorWhite"
             android:textAllCaps="false"
@@ -72,7 +72,7 @@
             android:id="@+id/new_to_app"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New to the app?"
+            android:text="@string/new_to_the_app"
             android:textColor="@color/colorText"
             android:textAllCaps="false"
             android:textSize="18sp"
@@ -86,7 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorAccent"
-            android:text="Sign up now"
+            android:text="@string/sign_up_now"
             android:textColor="@color/colorAccent"
             android:textStyle="bold"
             android:textSize="18sp"
