--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="15dp"
-            android:text="No contacts selected."
+            android:text="@string/no_contacts_selected"
             android:textSize="18sp"/>
 
         <TextView
@@ -42,7 +42,7 @@
             android:layout_toStartOf="@+id/select_all"
             android:layout_marginEnd="5dp"
             android:layout_centerVertical="true"
-            android:text="Select all"
+            android:text="@string/select_all"
             android:textSize="18sp"/>
 
         <CheckBox
@@ -63,7 +63,7 @@
         android:id="@+id/no_contacts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No contacts found."
+        android:text="@string/no_contacts_found"
         android:textColor="@color/colorText"
         android:textSize="24sp"
         android:textAlignment="center"
@@ -76,33 +76,44 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true">
 
-        <ImageView
-            android:id="@+id/pick_emoji_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/colorPrimaryDark"
-            android:padding="4dp"
-            android:src="@drawable/ic_baseline_emoji_emotions_24"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"/>
-
-        <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
-            android:id="@+id/input_message"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:ems="10"
-            android:hint="Type a message..."
-            android:textColorHint="@color/colorText"
-            android:textColor="@color/colorPrimaryDark"
-            android:inputType="textCapSentences|textMultiLine"
-            android:background="@drawable/custom_input"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:layout_toStartOf="@+id/send_message_btn"
-            android:layout_toEndOf="@id/pick_emoji_btn"
-            android:layout_alignParentBottom="true"
-            emojicon:emojiconSize="30sp"/>
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/send_message_btn"
+            android:orientation="horizontal"
+            android:background="@drawable/custom_input">
+            <ImageView
+                android:id="@+id/pick_picture_btn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:padding="4dp"
+                android:src="@drawable/ic_baseline_photo_camera_24"/>
+            <ImageView
+                android:id="@+id/pick_emoji_btn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:padding="4dp"
+                android:src="@drawable/ic_baseline_emoji_emotions_24"/>
+
+            <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
+                android:id="@+id/input_message"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:ems="10"
+                android:layout_gravity="center"
+                android:hint="@string/type_a_message"
+                android:textColorHint="@color/colorText"
+                android:textColor="@color/colorPrimaryDark"
+                android:inputType="textCapSentences|textMultiLine"
+                android:background="@drawable/message_input"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                emojicon:emojiconSize="30sp"/>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/send_message_btn"
