--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -23,7 +23,7 @@
         android:id="@+id/no_chats"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="You have no active conversations."
+        android:text="@string/no_active_conversations"
         android:textColor="@color/colorText"
         android:textAlignment="center"
         android:textSize="24sp"
