--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -32,33 +32,44 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true">
 
-        <ImageView
-            android:id="@+id/pick_emoji_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/colorPrimaryDark"
-            android:padding="4dp"
-            android:src="@drawable/ic_baseline_emoji_emotions_24"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"/>
-
-        <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
-            android:id="@+id/input_message"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:ems="10"
-            android:hint="Type a message..."
-            android:textColorHint="@color/colorText"
-            android:textColor="@color/colorPrimaryDark"
-            android:inputType="textCapSentences|textMultiLine"
-            android:background="@drawable/custom_input"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:layout_toStartOf="@+id/send_message_btn"
-            android:layout_toEndOf="@id/pick_emoji_btn"
-            android:layout_alignParentBottom="true"
-            emojicon:emojiconSize="30sp"/>
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/send_message_btn"
+            android:orientation="horizontal"
+            android:background="@drawable/custom_input">
+            <ImageView
+                android:id="@+id/pick_picture_btn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:padding="4dp"
+                android:src="@drawable/ic_baseline_photo_camera_24"/>
+            <ImageView
+                android:id="@+id/pick_emoji_btn"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:padding="4dp"
+                android:src="@drawable/ic_baseline_emoji_emotions_24"/>
+
+            <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
+                android:id="@+id/input_message"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:ems="10"
+                android:layout_gravity="center"
+                android:hint="@string/type_a_message"
+                android:textColorHint="@color/colorText"
+                android:textColor="@color/colorPrimaryDark"
+                android:inputType="textCapSentences|textMultiLine"
+                android:background="@drawable/message_input"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                emojicon:emojiconSize="30sp"/>
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/send_message_btn"
