--- a/app/src/main/res/layout/basic_bar_layout.xml
+++ b/app/src/main/res/layout/basic_bar_layout.xml
@@ -34,7 +34,7 @@
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/back_btn"
             android:layout_marginStart="10dp"
-            android:text="Activity title"
+            android:text="@string/activity_title"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
     </RelativeLayout>
 
