--- a/app/src/main/res/layout/chat_bar_layout.xml
+++ b/app/src/main/res/layout/chat_bar_layout.xml
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/chat_image"
             android:layout_marginStart="10dp"
-            android:text="Name"
+            android:text="@string/name"
             android:textStyle="bold"
             android:textSize="22sp"
             android:textColor="@color/colorAccent"/>
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="Status"
+            android:text="@string/status"
             android:textColor="@color/colorText"
             android:layout_toEndOf="@id/chat_image"
             android:layout_below="@id/chat_name"/>
