--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="Timestamp"
+            android:text="@string/timestamp"
             android:textColor="@color/colorText"
             android:layout_below="@id/contact_name_item"
             android:layout_alignParentEnd="true"
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="Available now"
+            android:text="@string/available_now"
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/colorText"
