--- a/app/src/main/res/layout/custom_contact_item.xml
+++ b/app/src/main/res/layout/custom_contact_item.xml
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:text="Available now"
+            android:text="@string/available_now"
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/colorText"
