--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -22,7 +22,7 @@
             android:id="@+id/no_contacts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Your contacts list is empty."
+            android:text="@string/contacts_list_empty"
             android:textColor="@color/colorText"
             android:textSize="24sp"
             android:textAlignment="center"
